--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 
 theme: jekyll-theme-minimal
-title: Octocat's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: r4tt's Burr0w
+description: Live Free or Die
